--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         }
     ],
     "require": {
-        "php": "^7.1",
+        "php": ">=7.1",
         "psr/http-message": "^1.0",
         "psr/http-client": "^1.0"
     },
